feat: update dependencies and enhance config management error handling
- Updated build configuration to use insecure HTTP protocol for internal Maven repository
- Added missing dependencies for httpclient5 and h2 database for testing
- Enhanced ConfigManagementService with proper existence checks before deletion operations
- Added ConfigNotFoundException handling for all delete operations (input adapter, parser, transform, output adapter)
- Improved input value handling in configuration UI with better JSON formatting and checkbox support